<resources>
    <string name="app_name">DoorWatch Prototype</string>
    <string name="open">Open Navigation Drawer</string>
    <string name="close">Close Navigation Drawer</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="cam_footage">Camera Footage</string>
    <string name="connect_device">Connect Device</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="welcome_message">Welcome to DoorWatch! Your doorstep, always in view. Let\'s get started!</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="enter_your_last_name">Enter your last name</string>
    <string name="enter_your_first_name">Enter your first name</string>
    <string name="create_your_new_account">Create your new account</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="remember_me">Remember Me</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="motion_sensor">Motion Sensor Data</string>
    <string name="ultrasonic_sensor_data">Ultrasonic Sensor Data</string>
    <string name="live_alerts">Live Alerts</string>
    <string name="value">Value</string>
    <string name="time_header">Time:</string>
    <string name="date_header">Date:</string>
    <string name="sensor_value">Sensor Value:</string>
    <string name="motion_sensor_header">Motion Sensor:</string>
    <string name="us_sensor_header">US Sensor:</string>
    <string name="us_sensor_data">US Sensor Data</string>
    <string name="motion_sensor_data">Motion Sensor Data</string>
    <string name="alert">Alert</string>
    <string name="back_button">Back Button</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_home_name">Enter Home Name</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="create_your_first_home">Create Your First Home</string>
    <string name="add_home">Add Home</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="please_enter_valid_email_and_password">Please enter valid email and password</string>
    <string name="email_cannot_be_empty">Email cannot be empty.</string>
    <string name="please_enter_a_valid_email_address">Please enter a valid email address.</string>
    <string name="password_cannot_be_empty">Password cannot be empty.</string>
    <string name="password_is_too_short">Password is too short.</string>
    <string name="please_verify_your_email_address">Please verify your email address!</string>
    <string name="account_not_found_please_sign_up">Account not found. Please sign up.</string>
    <string name="invalid_credentials_please_try_again">Invalid credentials. Please try again.</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="invalid_information">Invalid Information</string>
    <string name="name_can_not_be_empty">Name can not be empty!</string>
    <string name="password_must_be_at_least_8_characters">Password must be at least 8 characters</string>
    <string name="password_must_contain_at_least_one_digit">Password must contain at least one digit.</string>
    <string name="password_must_contain_at_least_one_uppercase_letter">Password must contain at least one uppercase letter.</string>
    <string name="password_must_contain_at_least_one_lowercase_letter">Password must contain at least one lowercase letter.</string>
    <string name="password_must_contain_at_least_one_valid_special_character"><![CDATA[Password must contain at least one valid special character (!@#$%^&*+=?-).]]></string>
    <string name="passwords_do_not_match">Passwords do not match.</string>
    <string name="registered_successfully_please_check_your_email_for_verification">Registered Successfully. Please check your email for verification</string>
    <string name="verify_the_email_before_joining_in">Verify the email before joining in!</string>
    <string name="failed_to_save_user_profile_information_please_try_again">Failed to save user profile information. Please try again</string>
    <string name="an_account_with_this_email_already_exists">An account with this email already exists!</string>
    <string name="connect_your_device_by_entering_the_code_found_on_the_back_of_the_camera">Connect your device by entering the code found on the back of the camera or scan the QR code</string>
    <string name="enter_device_code">Enter Device Code</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="next">Next</string>
    <string name="home">Home</string>
    <string name="enter_device_name">Enter Device Name</string>
    <string name="device_name">Device Name</string>
    <string name="enter_device_id_manually">Enter Device ID Manually</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="enter_the_device_code">Enter the device code</string>
    <string name="select_where_you_want_to_add_the_device">Select where you want to add the device</string>
    <string name="scan_your_face">Scan Your Face</string>
    <string name="settings">Settings</string>
    <string name="profile_information">Profile Information</string>
    <string name="profile">Profile</string>
    <string name="manage_homes">Manage Homes</string>
    <string name="home_management">Home Management</string>
    <string name="upload_picture_for_face_recognition">Upload picture for face recognition !</string>
    <string name="take_a_picture_and_upload"> Take a picture and upload    </string>
    <string name="forget_password">Forgot Password</string>
    <string name="reset_with_email">"Please provide your email to reset your password "</string>
    <string name="email"> Email</string>
    <string name="reset_password">Reset Password</string>
    <string name="back"> Back </string>
    <string name="scan_face">Scan Face</string>
    <string name="not_now">Not now</string>
    <string name="counter">Counter</string>
    <string name="device_settings">Device Settings</string>
    <string name="app_info">App Info</string>
    <string name="language">Language</string>
    <string name="dark_mode">Dark mode</string>
    <string name="app_version">APP VERSION/UPDATE</string>
    <string name="help_and_support">HELP AND SUPPORT</string>
    <string name="delete_acc">DELETE ACCOUNT</string>
    <string name="save">Save</string>
    <string name="edit_password">Edit Password</string>
    <string name="edit_message">Edit Your Profile Information Here</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="update_password">Update Password</string>
    <string name="about_us">About Us</string>
    <string name="text_about_us">We are a small team of engineering students from Concordia University. This application is a project for the ELEC 390 course given by our institution. Our mission is to transform the way families experience safety and security through cutting-edge technology. Our product is designed to provide families with an unparalleled sense of protection and peace of mind. We are to design an android-based app that utilizes advanced motion capture monitoring devices that will alert families of any detected motion in houses. </string>
    <string name="contact_info">Contact Information</string>
    <string name="contact_info_text"><![CDATA[
    General inquiries:

    \n\nIf you have a block on your "account", questions about policies or procedures, are unsure where to turn to, or have general questions.

    \n\n+1 (514) 000-0000
    \n\nmotionsensor@doorwatch.ca
    ]]></string>
    <string name="disclaimer">Disclaimer</string>
    <string name="text_disclaimer"><![CDATA[
    Before using the Application, please read and understand the following disclaimer:

    \n\nLimited Liability:

    \n\nThe Application is provided \"as is\" without any warranties, expressed or implied. Our team assume no responsibility for the reliability, accuracy, or completeness of the content captured by the surveillance camera.

    \n\nLegal Compliance:

    \n\nUsers of the Application are solely responsible for ensuring that their use complies with all applicable laws and regulations. This includes but is not limited to privacy laws, consent requirements, and any other relevant legislation concerning surveillance and data protection.

    \n\nNot a Substitute for Security Measures:

    \n\nThe Application is intended to enhance home security, but it is not a substitute for other security measures. Users are advised to implement a comprehensive security strategy, including but not limited to physical security measures, alarms, and professional monitoring.

    \n\nNetwork and Device Security:

    \n\nUsers are responsible for ensuring the security of their network and connected devices. Our institution is not liable for any unauthorized access to the Application or the data it captures due to inadequate network or device security.

    \n\nPrivacy Considerations:

    \n\nUsers are encouraged to respect the privacy of individuals captured by the surveillance camera. It is the responsibility of the user to obtain any necessary consents and permissions required by law before using the Application.

    \n\nData Storage:

    \n\nWe do not store or have access to the video footage captured by the surveillance camera. The data is directly sent to the user\'s phone device. Users are advised to implement appropriate measures for the secure storage of the captured footage.

    \n\nTechnical Limitations:

    \n\nThe Application may have technical limitations, and we do not guarantee uninterrupted or error-free operation. Users acknowledge that the performance of the Application may be affected by factors beyond the team\'s control.

    \n\nBy using the Application, users agree to accept all responsibility for its use and understand the limitations outlined in this disclaimer. We reserves the right to update or modify this disclaimer at any time.

]]></string>
    <string-array name="language_options">
        <item>English</item>
        <item>Français</item>
    </string-array>
    <string name="language_english">English</string>
    <string name="language_french">Français</string>
    <string name="press_next_to_continue">Press next to continue</string>
    <string name="app_version_update">App Version/Update</string>
    <string name="delete_account">Delete Account</string>
    <string name="scan_a_qr_code">Scan a QR code</string>
    <string name="scanned">"Scanned: "</string>
    <string name="cancelled">Cancelled</string>
    <string name="password_updated_successfully">Password updated successfully</string>
    <string name="invalid_passwords_please_check_and_try_again">Invalid passwords, please check and try again</string>
    <string name="incorrect_current_password_please_try_again">Incorrect current password, please try again</string>
    <string name="image_uploaded_successfully">Image Uploaded Successfully!</string>
    <string name="upload_failed">Upload Failed 👎</string>
    <string name="email_field_can_t_be_empty">Email field can\'t be empty</string>
    <string name="reset_password_link_has_been_sent_to_your_email_registered">Reset Password link has been sent to your Email registered</string>
</resources>