<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".AddDeviceIdActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/teal_700"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/back_button"
            android:padding="12dp"
            android:src="@drawable/ic_back_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect_device"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_gravity="center" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/connectDeviceInstruction"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:text="@string/enter_the_device_code"
        android:textColor="@color/deep_navy_blue"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
        app:layout_constraintVertical_bias="0.086" />

    <EditText
        android:id="@+id/deviceCodeInput"
        android:layout_width="325dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittext_background"
        android:hint="@string/enter_device_code"
        android:inputType="text"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:errorTextColor="@color/error_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connectDeviceInstruction"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:layout_width="325dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deviceCodeInput"
        app:layout_constraintVertical_bias="0.632">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancelButton"
            android:layout_width="154.5dp"
            android:layout_height="match_parent"
            android:layout_marginRight="8dp"
            android:background="@drawable/button_gradient"
            android:backgroundTint="@null"
            android:text="@string/cancel"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/nextButton"
            android:layout_width="154.5dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:background="@drawable/button_gradient"
            android:backgroundTint="@null"
            android:text="@string/next"
            android:textColor="@color/white" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>