<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_gradient"
    tools:context=".FaceScanActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/teal_700"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/back_button"
            android:padding="12dp"
            android:src="@drawable/ic_back_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_face"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_gravity="center" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0.5in"
        android:layout_gravity="center"
        android:textColor="@color/deep_navy_blue"
        android:textSize="20dp"
        android:textStyle="bold"
        android:text="@string/upload_picture_for_face_recognition"
        android:layout_marginBottom="0.5in"
        />

    <ImageView
        android:id="@+id/image_display"
        android:layout_gravity="center"
        android:layout_width="200dp"
        android:layout_height="210dp">
    </ImageView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/scan_pic"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginTop="80dp"
        android:layout_gravity="center"
        android:padding="16dp"
        android:background="@drawable/button_gradient"
        android:text="@string/take_a_picture_and_upload"
        android:drawableLeft="@drawable/baseline_linked_camera_24"
        android:textColor="@color/white"/>

</LinearLayout>